<resources>
    <string name="app_name">Speed test</string>
    <string name="title">reaction\nspeed test</string>
    <string name="main_SolidBtn">single play</string>
    <string name="main_GhostBtn">multi play</string>
    <string name="home">home</string>
    <string name="maxScore_ScoreGuidance">Your response rate is</string>
    <string name="exScore">000ms</string>
    <string name="Ready">Ready</string>
    <string name="game_count">0/5</string>
    <string name="game_speedCheck">000ms</string>
    <string name="game_guidance">Wait for the green</string>
    <string name="game_start_guidance">Click!</string>
    <string name="Click">Click</string>
    <string name="timeCheck">%1$dms</string>
    <string name="maxMs">%1$sms</string>
    <string name="count">%1$d/5</string>
    <string name="splash_Phrase">Test your reaction rate!</string>
    <string name="intro_image">intro_image</string>
    <string name="Soon1">Too Soon!</string>
    <string name="Soon2">Click to Reset</string>
    <string name="Reset">Reset</string>
    <string name="Restart">Restart</string>
    <string name="Winner">The winner of this game is</string>
    <string name="PLAYER1">PLAYER 1</string>
    <string name="PLAYER2">PLAYER 2</string>
    <string name="wait">Wait for this\ngame to end</string>
    <string name="banner">ca-app-pub-3126191506794881/1164279642</string>
</resources>